--- a/index.css
+++ b/index.css
@@ -15,7 +15,12 @@ body {
     justify-content: center;
     align-items: center;
 }
-
+.container{
+        display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 button{
     width: 154px;
     height: 42px;
